backend/src/ds/snapshots/airbackend__ds__attachments__test__create_signed_policy.snap
---
source: backend/src/ds/attachments.rs
expression: response
---
ProvisionAttachmentResponse {
    object_id: Some(
        Uuid {
            lo: 12132202258379663753,
            hi: 13425828374924906382,
        },
    ),
    upload_url_expiration: Some(
        ExpirationData {
            not_before: Some(
                Timestamp {
                    seconds: 1672531200,
                    nanos: 0,
                },
            ),
            not_after: Some(
                Timestamp {
                    seconds: 1672531260,
                    nanos: 0,
                },
            ),
        },
    ),
    upload_url: "https://region.example.com/data",
    upload_headers: [],
    post_policy: Some(
        SignedPostPolicy {
            base64: "eyJleHBpcmF0aW9uIjoiMjAyMy0wMS0wMVQwMDowMTowMFoiLCJjb25kaXRpb25zIjpbeyJidWNrZXQiOiJkYXRhIn0seyJrZXkiOiJhdHRhY2htZW50cy9iYTUyMWZjNjFlYzI0ZjhlYTg1ZTNkYWNjMWU5Njk4OSJ9LFsiY29udGVudC1sZW5ndGgtcmFuZ2UiLDAsMjA5NzE1MjBdLHsieC1hbXotY3JlZGVudGlhbCI6IkVYQU1QTEVLRVkvMjAyMzAxMDEvZXhhbXBsZS1yZWdpb24vczMvYXdzNF9yZXF1ZXN0In0seyJ4LWFtei1hbGdvcml0aG0iOiJBV1M0LUhNQUMtU0hBMjU2In0seyJ4LWFtei1kYXRlIjoiMjAyMzAxMDFUMDAwMDAwWiJ9XX0=",
            signature: "98024a62330bbfa93b9e5233ce6c98ea57dae57c5aa99f88eea7a58af332e4a1",
        },
    ),
}
