backend/src/ds/snapshots/airbackend__ds__attachments__test__create_signed_put.snap
---
source: backend/src/ds/attachments.rs
expression: response
---
Ok(
    ProvisionAttachmentResponse {
        object_id: Some(
            Uuid {
                lo: 12132202258379663753,
                hi: 13425828374924906382,
            },
        ),
        upload_url_expiration: Some(
            ExpirationData {
                not_before: Some(
                    Timestamp {
                        seconds: 1672531200,
                        nanos: 0,
                    },
                ),
                not_after: Some(
                    Timestamp {
                        seconds: 1672531260,
                        nanos: 0,
                    },
                ),
            },
        ),
        upload_url: "https://some-bucket.region.example.com/attachments/ba521fc61ec24f8ea85e3dacc1e96989?x-id=PutObject&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=EXAMPLEKEY%2F20230101%2Fexample-region%2Fs3%2Faws4_request&X-Amz-Date=20230101T000000Z&X-Amz-Expires=60&X-Amz-SignedHeaders=content-length%3Bhost&X-Amz-Signature=7bfaf362c891539bef1ec62282fa08d057753064123760894bbfed3273c30990",
        upload_headers: [
            HeaderEntry {
                key: "content-length",
                value: "42",
            },
        ],
        post_policy: None,
    },
)
